(executable
 (name test)
 (flags :standard -safe-string)
 (modules test)
 (libraries ok_socks5 oUnit)
 (modes byte))

(executable
 (name demo_socks5server)
 (public_name demo_socks5server)
 (flags :standard -safe-string)
 (modules demo_socks5server)
 (libraries ok_socks5 core_kernel lwt.unix ppx_deriving.runtime)
 (preprocess
  (pps lwt_ppx ppx_ok_lwt ppx_ok_monad ppx_deriving.std)))

(executable
 (name demo_forward)
 (public_name demo_forward)
 (flags :standard -safe-string)
 (modules demo_forward)
 (libraries ok_socks5 core_kernel lwt.unix ppx_deriving.runtime)
 (preprocess
  (pps lwt_ppx ppx_ok_lwt ppx_ok_monad ppx_deriving.std)))

(executable
 (name demo_bind_client)
 (public_name demo_bind_client)
 (flags :standard -safe-string)
 (modules demo_bind_client)
 (libraries ok_socks5 core_kernel lwt.unix ppx_deriving.runtime)
 (preprocess
  (pps lwt_ppx ppx_ok_lwt ppx_ok_monad ppx_deriving.std)))

(executable
 (name demo_bind_server)
 (public_name demo_bind_server)
 (flags :standard -safe-string)
 (modules demo_bind_server)
 (libraries ok_socks5 core_kernel lwt.unix ppx_deriving.runtime)
 (preprocess
  (pps lwt_ppx ppx_ok_lwt ppx_ok_monad ppx_deriving.std)))

(alias
 (name runtest)
 (deps
  (:< test.exe))
 (action
  (run %{<})))
